@@ -220,10 +220,13 @@ struct libspectrum_snap {
   /* Spectranet status */
   int spectranet_active;
   int spectranet_paged;
+  int spectranet_programmable_trap_active;
+  int spectranet_programmable_trap_msb;
   int spectranet_all_traps_disabled;
   int spectranet_rst8_trap_disabled;
   int spectranet_page_a;
   int spectranet_page_b;
+  libspectrum_word spectranet_programmable_trap;
   libspectrum_byte *spectranet_flash[1];
   libspectrum_byte *spectranet_ram[1];
 };
